added start command for heroku server

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "main": "dist/index.js",
   "license": "MIT",
   "scripts": {
+    "start": "node ./dist/index.js",
     "up": "docker-compose up",
     "dev": "ts-node-dev src/index.ts --transpile-only",
     "dev:ram": "nodemon src/index.ts",
